# Unified-Streamlit-Launcher

./: .gitignore  CODEX_IMPLEMENTATION_NOTES.md  LICENSE  PROJECT_CONTEXT_FOR_CHATGPT.md  README.md  launcher_config.json  platform_manifest.json  pyproject.toml  requirements-build.txt  requirements-dev.txt
.autoresearch/: backlog.md  results.tsv  state.json
apps/: README.md  apps.json
build_scripts/: build.py  bundle_venvs.py  create_pyinstaller_spec.py  installer.nsis  launcher_entry.py  sign_exe.py
config/: launcher_config.json
docs/: APP_DEVELOPMENT.md  BUILD.md  architecture.md  configuration.md  creating_apps.md  deployment.md  examples.md  installation.md  quickstart.md  release_process.md  runtime_plan.md  security.md  troubleshooting.md
documentation/: adding_new_apps.md  architecture.md  deployment.md  release_process.md  security_checklist.md  troubleshooting.md
launcher/: __init__.py  __main__.py  app_discovery.py  config_loader.py  constants.py  environment_manager.py  exceptions.py  health_checker.py  local_cache.py  logging_setup.py  main.py  models.py  path_utils.py  port_manager.py  process_manager.py  runtime_downloader.py  security.py  update_manager.py
runtime/: README.md
scripts/: build_exe.ps1  build_installer.ps1  build_launcher.ps1  build_release.ps1  clean.ps1  fetch_runtime.ps1  generate_checksums.ps1  manual_verify_dummy_app.ps1  pin_runtime_download.ps1  prepare_app_environment.ps1  prepare_runtime.ps1  run_launcher.ps1  run_launcher_dev.ps1  setup_dev.ps1  verify_release.ps1
tests/: conftest.py  test_app_discovery.py  (+10 more)
(+43 files in other folders)
