[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-streamlit-launcher"
version = "1.0.0"
description = "Windows desktop launcher and process manager for Streamlit apps"
requires-python = ">=3.11,<3.13"
dependencies = [
  "PySide6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "streamlit>=1.40,<2",
  "pyinstaller>=6",
]

[tool.setuptools.packages.find]
include = ["launcher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
